new booking attribute "proprietaryBankTransactionCode" available for some xs2a banks